fix: 修改数据表，修复sse白屏的问题
